[package]
name = "gutters"
description = "Basic but fast network communication between scientific applications"
categories = ["network-programming", "concurrency", "pipe"]
keywords = ["ipc", "pipe", "network"]
version = "0.1.0"
authors = ["gggto <47183108+gggto@users.noreply.github.com>"]
repository = "https://github.com/gggto/gutters"
license = "MIT"
readme = "README.md"
edition = "2021"