[package]
name = "gutters"
description = "Basic generic functions for building quick and dirty interprocess or network protocols."
categories = ["network-programming", "concurrency"]
keywords = ["ipc", "pipe", "network"]
version = "0.1.1"
authors = ["gggto <47183108+gggto@users.noreply.github.com>"]
repository = "https://github.com/gggto/gutters"
license = "MIT"
readme = "README.md"
edition = "2021"